<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="#ff949494">

    <SurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
         />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monitor Audio"
            android:id="@+id/buttonMonitorAudio" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cameraSwitchLabel"
            android:id="@+id/changeCameraSwitch"
            android:textOff="@string/cameraSwitchRear"
            android:textOn="@string/cameraSwitchFront"
            android:textAppearance="@android:style/TextAppearance.Holo.Small" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/audioLevelLabel"
            android:id="@+id/audioLevelLabel"
            android:layout_marginLeft="22dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_weight="0.29"
            android:minHeight="20dp"
            android:progress="10" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="--"
            android:id="@+id/integerTextView"

            />

        </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/audioThresholdLabel"
            android:id="@+id/audioThresholdLabel"
            android:layout_marginLeft="22dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="0.29" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="ZZZZ"
            android:id="@+id/audioThresholdTextView"
            android:layout_marginLeft="22dp" />

        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lockOrientationSwitchLabel"
            android:id="@+id/lockOrientationSwitch"
            android:layout_gravity="center_horizontal" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:id="@+id/debugTextView"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>
    </LinearLayout>